# FastApi_Template

./: .gitignore  .gitlab-ci.yml  DockerFile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
app/: cli.py  main.py
app/admin/: admin_router.py
app/config/: alembic.ini  setting.py
app/config/migrations/versions/: 450bdebbb5a4_update_phone_number_uniqueness.py  87e6eb0d2705_initial_migrate.py  888f3ec5b5ea_update_user_tables.py  bfd24b3989d7_fix_user_tables_mistakes.py
app/models/: user_model.py
app/routers/: user_router.py
src/: justfile  pyproject.toml
src/api/: __init__.py  v1.py
src/cmd/: asynq.py  main.py
src/config/: logger.py  openapi.py  settings.py
src/config/env/: .env.example
src/core/: auth.py  cache.py  exception.py  exception_handler.py  key_manager.py  limiter.py  logger.py  middlewares.py  pagination.py  permissions.py  response.py  schema.py  service_config.py  validators.py
src/database/: __init__.py  base.py  session.py
src/database/migrations/: env.py
src/models/: __init__.py
src/services/: __init__.py  tasks.py
