[tool.poetry]
name = "FastAPI-Template"
version = "0.1.0"
description = "A FastAPI Template for simplification of usage"
authors = ["ahMAD ASSadi <ds1380ahmad@gmail.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
